@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-21T16:25:43Z",
-  "count_outdated" : 527,
-  "uniques_outdated" : 305,
-  "count" : 561,
+  "timestamp" : "2022-09-22T01:47:35Z",
+  "count_outdated" : 529,
+  "uniques_outdated" : 306,
+  "count" : 563,
   "uniques" : 324,
   "clones" : [
-    {
-      "timestamp": "2022-09-07T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-08T00:00:00Z",
       "count": 2,
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-09-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
