@@ -1,3 +1,11 @@
+2022-09-22T01:47:35Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3102302859
+* notice: last 14d: unq all: 5 34
+* notice: prev accum: outdated-unq outdated-all / unq all: 305 527 / 324 561
+* notice: next accum: outdated-unq outdated-all / unq all: 306 529 / 324 563
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2022-09-07] / [2022-09-21]
+
 2022-09-21T16:25:43Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3099471641
 * notice: last 14d: unq all: 5 34
